	* error.c (print_error): used fixed COB_SMALL_BUFF instead of
	  unrelated system-specific BUFSIZ
	* parser.y, reserved.c: PROGRAM-ID/FUNCTION-ID added prototype parsing
	* parser.y, reserved.c, tree.h: added PROGRAM-ID IS RESIDENT
	  (without any codegen yet)
	* parser.y, reserved.c: added parsing for ACUCOBOL transaction management

2020-01-02  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Check for SQL reserved words used as column names

2020-01-01  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, field.c (copy_into_field), tree.h, config.def:
	  FR #193 implementation of SAME AS
	* cobc.c: Copyright year update

2020-01-01  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Updates for ODBC interface

2019-12-28  Edward Hart <edward.dan.hart@gmail.com>

	* config.c, config.def, ppparse.y, pplex.l: added ASSIGN directive and new option
	  implict-assign-dynamic-var (see bug #571).
	* config.c: added options external (= ibm) and dynamic (= mf) to
	  assign-clause.
	* typeck.c (cb_build_assignment_name): refactored.

2019-12-16  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Outputs 'WHEN' conditions in 'posfix' sequence

2019-12-15  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: bug #543 check for condition-name in ADDRESS OF

2019-12-03  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c: minor refactoring for file related output
	* parser.y: minor refactoring - use of set_current_field to remove
	  duplicated code, limit scope of some variables
	* parser.y: new identifier_field (checked field-identifier),
	  adjustment of some msgIds (obviously not part of any test before)

2019-12-01  Ron Norman <rjn@inglenet.com>

	* field.c, sqlxfdgen.c: Fix up some compile warnings
	  moved cb_parse_xfd from field.c to sqlxfdgen.c

2019-11-30  Ron Norman <rjn@inglenet.com> 

	* sqlxfdgen.c: Starter version to create DDL/XD files from record
	  descriptions and $XFD directives (more to come)

2019-11-28  Ron Norman <rjn@inglenet.com>
