@@ -361,7 +361,8 @@ enum cb_usage {
 	CB_USAGE_HNDL_VARIANT,		/* 35 */
 	CB_USAGE_HNDL_LM,		/* 36 */
 	CB_USAGE_COMP_N,		/* 37 */
-	CB_USAGE_ERROR			/* 38, always last */
+	CB_USAGE_CONTROL,		/* 38 */
+	CB_USAGE_ERROR			/* 39, always last */
 };
 
 
